--- a/Converter/app/src/main/res/layout/fragment_numpad.xml
+++ b/Converter/app/src/main/res/layout/fragment_numpad.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".NumpadFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/numpad_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:clipToPadding="false"
+        android:padding="16dp" />
 
 </FrameLayout>
