--- a/Converter/app/src/main/res/layout/activity_main.xml
+++ b/Converter/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/data_fragment"
+        android:name="com.example.converter.DataFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!--
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/numpad_fragment"
         android:name="com.example.converter.NumpadFragment"
         android:layout_width="wrap_content"
@@ -14,5 +24,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+    -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
