design has almost everything

--- a/Converter/app/src/main/res/layout/fragment_data.xml
+++ b/Converter/app/src/main/res/layout/fragment_data.xml
@@ -32,4 +32,28 @@
         app:layout_constraintStart_toEndOf="@id/source_unit_spinner"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/source_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
+        android:text="234.12312"
+        android:textSize="20sp"
+        android:padding="8dp"
+        app:layout_constraintEnd_toStartOf="@id/destination_value"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/source_unit_spinner" />
+
+    <TextView
+        android:id="@+id/destination_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
+        android:text="6885685.2313"
+        android:textSize="20sp"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/source_value"
+        app:layout_constraintTop_toBottomOf="@id/destination_unit_spinner" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
