--- a/Converter/app/src/premium/res/layout/fragment_data.xml
+++ b/Converter/app/src/premium/res/layout/fragment_data.xml
@@ -43,11 +43,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/source_unit_spinner" />
 
+    <Button
+        android:id="@+id/switch_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="switch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/source_value" />
+
     <Spinner
         android:id="@+id/destination_unit_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/source_value"
+        app:layout_constraintTop_toBottomOf="@id/switch_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
