--- a/Converter/app/src/premium/res/layout/fragment_data.xml
+++ b/Converter/app/src/premium/res/layout/fragment_data.xml
@@ -34,14 +34,17 @@
 
     <TextView
         android:id="@+id/source_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:fontFamily="sans-serif-black"
-        android:textSize="20sp"
         android:padding="8dp"
+        android:gravity="center_horizontal"
+        android:scrollbars="vertical"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/source_unit_spinner" />
+        app:layout_constraintTop_toBottomOf="@id/source_unit_spinner"
+        tools:text="0.111111" />
 
     <Button
         android:id="@+id/switch_button"
