--- a/Converter/app/src/premium/res/layout/fragment_data.xml
+++ b/Converter/app/src/premium/res/layout/fragment_data.xml
@@ -39,6 +39,7 @@
         android:fontFamily="sans-serif-black"
         android:padding="8dp"
         android:textSize="20sp"
+        android:longClickable="false"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
