before hiding the text select handle

--- a/Converter/app/src/premium/res/layout/fragment_data.xml
+++ b/Converter/app/src/premium/res/layout/fragment_data.xml
@@ -46,6 +46,21 @@
         app:layout_constraintTop_toBottomOf="@id/source_unit_spinner"
         tools:text="0.111111" />
 
+    <!--
+    <com.example.converter.NoMenuEditText
+        android:id="@+id/source_value"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:fontFamily="sans-serif-black"
+        android:padding="8dp"
+        android:textSize="20sp"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/source_unit_spinner"
+        tools:text="0.111111" />
+    -->
+
     <Button
         android:id="@+id/switch_button"
         android:layout_width="wrap_content"
