MonitoringEditText works, NoMenuEditText does not work

--- a/Converter/app/src/premium/res/layout/fragment_data.xml
+++ b/Converter/app/src/premium/res/layout/fragment_data.xml
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toEndOf="@id/source_unit_spinner"
         app:layout_constraintTop_toTopOf="@id/source_unit_spinner" />
 
-    <EditText
+    <com.example.converter.NoMenuEditText
         android:id="@+id/source_value"
         android:layout_width="160dp"
         android:layout_height="50dp"
@@ -47,6 +47,20 @@
         tools:text="0.111111" />
 
     <!--
+    <EditText
+        android:id="@+id/source_value"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:fontFamily="sans-serif-black"
+        android:padding="8dp"
+        android:textSize="20sp"
+        android:longClickable="false"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/source_unit_spinner"
+        tools:text="0.111111" />
+
     <com.example.converter.NoMenuEditText
         android:id="@+id/source_value"
         android:layout_width="160dp"
