--- a/TabataTimer/app/src/main/res/menu/main_activity_menu.xml
+++ b/TabataTimer/app/src/main/res/menu/main_activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="AlwaysShowAction">
     <item android:id="@+id/settings_item"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:title="settings"
         app:showAsAction="always" />
 </menu>
