--- a/TabataTimer/app/src/main/res/layout/settings_elems_layout.xml
+++ b/TabataTimer/app/src/main/res/layout/settings_elems_layout.xml
@@ -6,11 +6,9 @@
 
     <TextView android:id="@android:id/title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"/>
+        android:layout_height="wrap_content" />
 
     <TextView android:id="@android:id/summary"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="11sp"/>
+        android:layout_height="wrap_content" />
 </LinearLayout>
