--- a/TabataTimer/app/src/main/res/values/themes.xml
+++ b/TabataTimer/app/src/main/res/values/themes.xml
@@ -13,4 +13,27 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="small_title_text">
+        <item name="android:textSize">22sp</item>
+    </style>
+    <style name="small_body_text">
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="large_title_text">
+        <item name="android:textSize">28sp</item>
+    </style>
+    <style name="large_body_text">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Theme.TabataTimer.MediumText" parent="Theme.TabataTimer">
+        <item name="textTitle">@style/small_title_text</item>
+        <item name="textBody">@style/small_body_text</item>
+    </style>
+
+    <style name="Theme.TabataTimer.LargeText" parent="Theme.TabataTimer">
+        <item name="textTitle">@style/large_title_text</item>
+        <item name="textBody">@style/large_body_text</item>
+    </style>
 </resources>
