--- a/TabataTimer/app/src/main/res/values/themes.xml
+++ b/TabataTimer/app/src/main/res/values/themes.xml
@@ -16,12 +16,14 @@
 
     <style name="small_title_text">
         <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="small_body_text">
         <item name="android:textSize">16sp</item>
     </style>
     <style name="large_title_text">
         <item name="android:textSize">44sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="large_body_text">
         <item name="android:textSize">32sp</item>
