--- a/TabataTimer/app/src/main/res/layout/activity_main.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_main.xml
@@ -26,9 +26,20 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         tools:listitem="@layout/recyclerview_sequence_item"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/add_sequence_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/add_sequence_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="add sequence"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sequences_recycler_view"
+        style="?textTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
