sequence data class

--- a/TabataTimer/app/src/main/res/layout/activity_main.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:id="@+id/add_sequence_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add sequence"
+        android:text="@string/add_sequence"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
