--- a/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
+++ b/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
@@ -15,9 +15,9 @@
 
         <RadioGroup
             android:id="@+id/phase_type_selector"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <RadioButton
                 style="?textBody"
@@ -60,7 +60,7 @@
             android:id="@+id/phase_duration_sec_edittext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="number"
             android:maxLength="3"
             android:hint="@string/duration" />
 
