use plus and minus to change repetitions number

--- a/TabataTimer/app/src/main/res/layout/activity_timer.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_timer.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textSize="100sp"
         android:textStyle="bold"
-        android:text="99"
+        android:text=""
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/timer_phases_recyclerview"
         app:layout_constraintStart_toStartOf="parent"
