--- a/TabataTimer/app/src/main/res/layout/activity_timer.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_timer.xml
@@ -21,7 +21,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/timer_phases_recyclerview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
