--- a/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
+++ b/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
@@ -3,20 +3,22 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <RadioGroup
             android:id="@+id/phase_type_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:orientation="vertical">
 
             <RadioButton
@@ -46,33 +48,59 @@
                 android:text="@string/cooldown" />
         </RadioGroup>
 
+        <Button
+            style="?textTitle"
+            android:id="@+id/decrease_duration_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/phase_duration_sec_textview"
+            app:layout_constraintTop_toBottomOf="@id/phase_type_selector"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="-" />
+
+        <TextView
+            style="?textTitle"
+            android:id="@+id/phase_duration_sec_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/decrease_duration_button"
+            app:layout_constraintEnd_toStartOf="@id/increase_duration_button"
+            app:layout_constraintTop_toTopOf="@id/decrease_duration_button"
+            app:layout_constraintBottom_toBottomOf="@id/decrease_duration_button"
+            />
+
+        <Button
+            style="?textTitle"
+            android:id="@+id/increase_duration_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/phase_duration_sec_textview"
+            app:layout_constraintTop_toBottomOf="@id/phase_type_selector"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="+" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    <!--
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                style="?textTitle"
-                android:id="@+id/decrease_duration_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
 
-            <TextView
-                style="?textTitle"
-                android:id="@+id/phase_duration_sec_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <Button
-                style="?textTitle"
-                android:id="@+id/increase_duration_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+" />
 
         </LinearLayout>
 
     </LinearLayout>
+    -->
 
 </com.google.android.material.card.MaterialCardView>
