add dummy delete phase button

--- a/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
+++ b/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
@@ -13,6 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/delete_phase_button"
+            app:icon="@android:drawable/ic_menu_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:iconGravity="textStart"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
         <RadioGroup
             android:id="@+id/phase_type_selector"
             android:layout_width="wrap_content"
