--- a/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
+++ b/TabataTimer/app/src/main/res/layout/recyclerview_phase_item.xml
@@ -14,89 +14,118 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/move_phase_up_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:icon="@android:drawable/arrow_up_float"
+            app:iconGravity="textStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/delete_phase_button" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/move_phase_down_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            android:padding="2dp"
+            app:icon="@android:drawable/arrow_down_float"
+            app:iconGravity="textStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/move_phase_up_button" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_phase_button"
-            app:icon="@android:drawable/ic_menu_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
+            app:icon="@android:drawable/ic_menu_delete"
             app:iconGravity="textStart"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
             android:id="@+id/phase_type_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical">
+            app:layout_constraintTop_toTopOf="parent">
 
             <RadioButton
-                style="?textBody"
                 android:id="@+id/warmup_radio"
+                style="?textBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/warmup"
-                android:checked="true" />
+                android:checked="true"
+                android:text="@string/warmup" />
+
             <RadioButton
-                style="?textBody"
                 android:id="@+id/work_radio"
+                style="?textBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/work" />
+
             <RadioButton
-                style="?textBody"
                 android:id="@+id/rest_radio"
+                style="?textBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rest" />
+
             <RadioButton
-                style="?textBody"
                 android:id="@+id/cooldown_radio"
+                style="?textBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cooldown" />
         </RadioGroup>
 
         <Button
-            style="?textTitle"
             android:id="@+id/decrease_duration_button"
+            style="?textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/phase_duration_sec_textview"
-            app:layout_constraintTop_toBottomOf="@id/phase_type_selector"
+            android:text="-"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="-" />
+            app:layout_constraintEnd_toStartOf="@id/phase_duration_sec_textview"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/phase_type_selector" />
 
         <TextView
-            style="?textTitle"
             android:id="@+id/phase_duration_sec_textview"
+            style="?textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/decrease_duration_button"
-            app:layout_constraintEnd_toStartOf="@id/increase_duration_button"
-            app:layout_constraintTop_toTopOf="@id/decrease_duration_button"
             app:layout_constraintBottom_toBottomOf="@id/decrease_duration_button"
-            />
+            app:layout_constraintEnd_toStartOf="@id/increase_duration_button"
+            app:layout_constraintStart_toEndOf="@id/decrease_duration_button"
+            app:layout_constraintTop_toTopOf="@id/decrease_duration_button" />
 
         <Button
-            style="?textTitle"
             android:id="@+id/increase_duration_button"
+            style="?textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="+"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/phase_duration_sec_textview"
-            app:layout_constraintTop_toBottomOf="@id/phase_type_selector"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="+" />
+            app:layout_constraintTop_toBottomOf="@id/phase_type_selector" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     <!--
