--- a/TabataTimer/app/src/main/res/layout/recyclerview_timer_phase_item.xml
+++ b/TabataTimer/app/src/main/res/layout/recyclerview_timer_phase_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <Button
+        style="?textBody"
         android:id="@+id/timer_phase_item_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
